kubernetes/python-flask-api-hostname-env-time/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-flask-api-hostname-env-time-cluster-ip
  namespace: python
spec:
  type: ClusterIP
  selector:
    app: python-flask-api-hostname-env-time
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 5000
