kubernetes/python-flask-api-hostname-env-time/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-flask-api-hostname-env-time-service
  namespace: python
spec:
  type: LoadBalancer
  selector:
    app: python-flask-api-hostname-env-time
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 5000
